<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blabber Mouth</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up </string>
    <string name="email_field">Email</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_up_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re Sorry!</string>
    <string name="menu_camera_label">Camera!</string>
    <string name="error_external_storage">"There was a problem accessing your device\'s external storage."</string>
    <string name="general_error">Sorry there was an error.</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The Selected file is too large! Select a new file</string>
    <string name="empty_recipients_list">Choose some friends first</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re Sorry</string>
    <string name="success_message">Message Sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="content_desc_background">Blabber Mouth background color</string>
    <string name="subtitle">A great way to share photos and videos </string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="content_desc_user_avatar">User Avatar</string>
    <string name="content_desc_user_checkmark">User Avatar Checkmark</string>
    <string name="push_message">"You have a new message from %s!"</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_view_image">Blabber Mouth</string>

</resources>
