<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="samcoles.blabbermouth.samcoles.blabbermouth.ui.SignUpActivity"
    style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"
        />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubtitle"
        />

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/subtitle"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        android:background="@android:color/white">

    <EditText
        android:id="@+id/usernameField"
        android:hint="@string/username_field"
        style="@style/AuthEditText" >

        <requestFocus />
     </EditText>

    <EditText
        android:id="@+id/passwordField"
        style="@style/AuthEditText"
        android:hint="@string/password_field"
        android:inputType="textPassword"
       />

    <EditText
        android:id="@+id/emailField"
        style="@style/AuthEditText"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"

        />

    <Button
        android:id="@+id/signupButton"
        android:text="@string/sign_up_button"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp"

         />

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        style="@style/AuthButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        />

</RelativeLayout>
